<resources>
    <string name="app_name">Stock Control</string>

    <string name="action_settings">Settings</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Description</string>
    <string name="product_quantity">Quantity</string>
    <string name="minimum_quantity">Minimum Quantity</string>
    <string name="product_price">Price</string>
    <string name="lbl_add">Add new product</string>
    <string name="lbl_save">Save</string>
    <string name="msg_required">Required Field!</string>
    <string name="msg_successfully_saved">Successfully saved!</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_edit">Edit</string>
    <string name="confirm_message">Confirm</string>
    <string name="confirm_delete">Are you sure you want to delete?</string>
    <string name="lbl_yes">Yes</string>
    <string name="succesfully_deleted">Successfully deleted!</string>
    <string name="lbl_no">No</string>
    <string name="msg_select_product_image">Select the product image</string>
    <string name="msg_saving_product">Saving product...</string>
    <string name="update_product_list">Updating products list...</string>
    <string name="lbl_product_name">Name:</string>
    <string name="lbl_price">Price:</string>
    <string name="lbl_quantity">Quantity:</string>
    <string name="lbl_insert_new_product">Insert a new product</string>
    <string name="alert_message_quantities">The quantity should not be smaller than the informed minimum quantity !</string>
    <string name="msg_deletting_product">Deleting product...</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_products">Products</string>
    <string name="lbl_filter">Filter</string>
    <string name="filtering_products">Filtering products...</string>
</resources>
